src/test/ui/transmutability/numbers.stderr
error[E0277]: the trait bound `bool: BikeshedIntrinsicFromAny<i8>` is not satisfied
  --> $DIR/numbers.rs:27:42
   |
LL |     assert_is_transmutable_any::<   i8,  bool>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<i8>` is not implemented for `bool`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `bool: BikeshedIntrinsicFromAny<u8>` is not satisfied
  --> $DIR/numbers.rs:29:42
   |
LL |     assert_is_transmutable_any::<   u8,  bool>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<u8>` is not implemented for `bool`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i16: BikeshedIntrinsicFromAny<bool>` is not satisfied
  --> $DIR/numbers.rs:57:43
   |
LL |     assert_is_transmutable_any::< bool,   i16>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<bool>` is not implemented for `i16`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u16: BikeshedIntrinsicFromAny<bool>` is not satisfied
  --> $DIR/numbers.rs:58:43
   |
LL |     assert_is_transmutable_any::< bool,   u16>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<bool>` is not implemented for `u16`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i32: BikeshedIntrinsicFromAny<bool>` is not satisfied
  --> $DIR/numbers.rs:59:43
   |
LL |     assert_is_transmutable_any::< bool,   i32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<bool>` is not implemented for `i32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f32: BikeshedIntrinsicFromAny<bool>` is not satisfied
  --> $DIR/numbers.rs:60:43
   |
LL |     assert_is_transmutable_any::< bool,   f32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<bool>` is not implemented for `f32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u32: BikeshedIntrinsicFromAny<bool>` is not satisfied
  --> $DIR/numbers.rs:61:43
   |
LL |     assert_is_transmutable_any::< bool,   u32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<bool>` is not implemented for `u32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u64: BikeshedIntrinsicFromAny<bool>` is not satisfied
  --> $DIR/numbers.rs:62:43
   |
LL |     assert_is_transmutable_any::< bool,   u64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<bool>` is not implemented for `u64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i64: BikeshedIntrinsicFromAny<bool>` is not satisfied
  --> $DIR/numbers.rs:63:43
   |
LL |     assert_is_transmutable_any::< bool,   i64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<bool>` is not implemented for `i64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f64: BikeshedIntrinsicFromAny<bool>` is not satisfied
  --> $DIR/numbers.rs:64:43
   |
LL |     assert_is_transmutable_any::< bool,   f64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<bool>` is not implemented for `f64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u128: BikeshedIntrinsicFromAny<bool>` is not satisfied
  --> $DIR/numbers.rs:65:42
   |
LL |     assert_is_transmutable_any::< bool,  u128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<bool>` is not implemented for `u128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i128: BikeshedIntrinsicFromAny<bool>` is not satisfied
  --> $DIR/numbers.rs:66:42
   |
LL |     assert_is_transmutable_any::< bool,  i128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<bool>` is not implemented for `i128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i16: BikeshedIntrinsicFromAny<i8>` is not satisfied
  --> $DIR/numbers.rs:68:43
   |
LL |     assert_is_transmutable_any::<   i8,   i16>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i8>` is not implemented for `i16`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u16: BikeshedIntrinsicFromAny<i8>` is not satisfied
  --> $DIR/numbers.rs:69:43
   |
LL |     assert_is_transmutable_any::<   i8,   u16>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i8>` is not implemented for `u16`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i32: BikeshedIntrinsicFromAny<i8>` is not satisfied
  --> $DIR/numbers.rs:70:43
   |
LL |     assert_is_transmutable_any::<   i8,   i32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i8>` is not implemented for `i32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f32: BikeshedIntrinsicFromAny<i8>` is not satisfied
  --> $DIR/numbers.rs:71:43
   |
LL |     assert_is_transmutable_any::<   i8,   f32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i8>` is not implemented for `f32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u32: BikeshedIntrinsicFromAny<i8>` is not satisfied
  --> $DIR/numbers.rs:72:43
   |
LL |     assert_is_transmutable_any::<   i8,   u32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i8>` is not implemented for `u32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u64: BikeshedIntrinsicFromAny<i8>` is not satisfied
  --> $DIR/numbers.rs:73:43
   |
LL |     assert_is_transmutable_any::<   i8,   u64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i8>` is not implemented for `u64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i64: BikeshedIntrinsicFromAny<i8>` is not satisfied
  --> $DIR/numbers.rs:74:43
   |
LL |     assert_is_transmutable_any::<   i8,   i64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i8>` is not implemented for `i64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f64: BikeshedIntrinsicFromAny<i8>` is not satisfied
  --> $DIR/numbers.rs:75:43
   |
LL |     assert_is_transmutable_any::<   i8,   f64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i8>` is not implemented for `f64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u128: BikeshedIntrinsicFromAny<i8>` is not satisfied
  --> $DIR/numbers.rs:76:42
   |
LL |     assert_is_transmutable_any::<   i8,  u128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<i8>` is not implemented for `u128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i128: BikeshedIntrinsicFromAny<i8>` is not satisfied
  --> $DIR/numbers.rs:77:42
   |
LL |     assert_is_transmutable_any::<   i8,  i128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<i8>` is not implemented for `i128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i16: BikeshedIntrinsicFromAny<u8>` is not satisfied
  --> $DIR/numbers.rs:79:43
   |
LL |     assert_is_transmutable_any::<   u8,   i16>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u8>` is not implemented for `i16`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u16: BikeshedIntrinsicFromAny<u8>` is not satisfied
  --> $DIR/numbers.rs:80:43
   |
LL |     assert_is_transmutable_any::<   u8,   u16>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u8>` is not implemented for `u16`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i32: BikeshedIntrinsicFromAny<u8>` is not satisfied
  --> $DIR/numbers.rs:81:43
   |
LL |     assert_is_transmutable_any::<   u8,   i32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u8>` is not implemented for `i32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f32: BikeshedIntrinsicFromAny<u8>` is not satisfied
  --> $DIR/numbers.rs:82:43
   |
LL |     assert_is_transmutable_any::<   u8,   f32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u8>` is not implemented for `f32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u32: BikeshedIntrinsicFromAny<u8>` is not satisfied
  --> $DIR/numbers.rs:83:43
   |
LL |     assert_is_transmutable_any::<   u8,   u32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u8>` is not implemented for `u32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u64: BikeshedIntrinsicFromAny<u8>` is not satisfied
  --> $DIR/numbers.rs:84:43
   |
LL |     assert_is_transmutable_any::<   u8,   u64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u8>` is not implemented for `u64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i64: BikeshedIntrinsicFromAny<u8>` is not satisfied
  --> $DIR/numbers.rs:85:43
   |
LL |     assert_is_transmutable_any::<   u8,   i64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u8>` is not implemented for `i64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f64: BikeshedIntrinsicFromAny<u8>` is not satisfied
  --> $DIR/numbers.rs:86:43
   |
LL |     assert_is_transmutable_any::<   u8,   f64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u8>` is not implemented for `f64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u128: BikeshedIntrinsicFromAny<u8>` is not satisfied
  --> $DIR/numbers.rs:87:42
   |
LL |     assert_is_transmutable_any::<   u8,  u128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<u8>` is not implemented for `u128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i128: BikeshedIntrinsicFromAny<u8>` is not satisfied
  --> $DIR/numbers.rs:88:42
   |
LL |     assert_is_transmutable_any::<   u8,  i128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<u8>` is not implemented for `i128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i32: BikeshedIntrinsicFromAny<i16>` is not satisfied
  --> $DIR/numbers.rs:90:43
   |
LL |     assert_is_transmutable_any::<  i16,   i32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i16>` is not implemented for `i32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f32: BikeshedIntrinsicFromAny<i16>` is not satisfied
  --> $DIR/numbers.rs:91:43
   |
LL |     assert_is_transmutable_any::<  i16,   f32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i16>` is not implemented for `f32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u32: BikeshedIntrinsicFromAny<i16>` is not satisfied
  --> $DIR/numbers.rs:92:43
   |
LL |     assert_is_transmutable_any::<  i16,   u32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i16>` is not implemented for `u32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u64: BikeshedIntrinsicFromAny<i16>` is not satisfied
  --> $DIR/numbers.rs:93:43
   |
LL |     assert_is_transmutable_any::<  i16,   u64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i16>` is not implemented for `u64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i64: BikeshedIntrinsicFromAny<i16>` is not satisfied
  --> $DIR/numbers.rs:94:43
   |
LL |     assert_is_transmutable_any::<  i16,   i64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i16>` is not implemented for `i64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f64: BikeshedIntrinsicFromAny<i16>` is not satisfied
  --> $DIR/numbers.rs:95:43
   |
LL |     assert_is_transmutable_any::<  i16,   f64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i16>` is not implemented for `f64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u128: BikeshedIntrinsicFromAny<i16>` is not satisfied
  --> $DIR/numbers.rs:96:42
   |
LL |     assert_is_transmutable_any::<  i16,  u128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<i16>` is not implemented for `u128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i128: BikeshedIntrinsicFromAny<i16>` is not satisfied
  --> $DIR/numbers.rs:97:42
   |
LL |     assert_is_transmutable_any::<  i16,  i128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<i16>` is not implemented for `i128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i32: BikeshedIntrinsicFromAny<u16>` is not satisfied
  --> $DIR/numbers.rs:99:43
   |
LL |     assert_is_transmutable_any::<  u16,   i32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u16>` is not implemented for `i32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f32: BikeshedIntrinsicFromAny<u16>` is not satisfied
  --> $DIR/numbers.rs:100:43
   |
LL |     assert_is_transmutable_any::<  u16,   f32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u16>` is not implemented for `f32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u32: BikeshedIntrinsicFromAny<u16>` is not satisfied
  --> $DIR/numbers.rs:101:43
   |
LL |     assert_is_transmutable_any::<  u16,   u32>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u16>` is not implemented for `u32`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u64: BikeshedIntrinsicFromAny<u16>` is not satisfied
  --> $DIR/numbers.rs:102:43
   |
LL |     assert_is_transmutable_any::<  u16,   u64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u16>` is not implemented for `u64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i64: BikeshedIntrinsicFromAny<u16>` is not satisfied
  --> $DIR/numbers.rs:103:43
   |
LL |     assert_is_transmutable_any::<  u16,   i64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u16>` is not implemented for `i64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f64: BikeshedIntrinsicFromAny<u16>` is not satisfied
  --> $DIR/numbers.rs:104:43
   |
LL |     assert_is_transmutable_any::<  u16,   f64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u16>` is not implemented for `f64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u128: BikeshedIntrinsicFromAny<u16>` is not satisfied
  --> $DIR/numbers.rs:105:42
   |
LL |     assert_is_transmutable_any::<  u16,  u128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<u16>` is not implemented for `u128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i128: BikeshedIntrinsicFromAny<u16>` is not satisfied
  --> $DIR/numbers.rs:106:42
   |
LL |     assert_is_transmutable_any::<  u16,  i128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<u16>` is not implemented for `i128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u64: BikeshedIntrinsicFromAny<i32>` is not satisfied
  --> $DIR/numbers.rs:108:43
   |
LL |     assert_is_transmutable_any::<  i32,   u64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i32>` is not implemented for `u64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i64: BikeshedIntrinsicFromAny<i32>` is not satisfied
  --> $DIR/numbers.rs:109:43
   |
LL |     assert_is_transmutable_any::<  i32,   i64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i32>` is not implemented for `i64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f64: BikeshedIntrinsicFromAny<i32>` is not satisfied
  --> $DIR/numbers.rs:110:43
   |
LL |     assert_is_transmutable_any::<  i32,   f64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<i32>` is not implemented for `f64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u128: BikeshedIntrinsicFromAny<i32>` is not satisfied
  --> $DIR/numbers.rs:111:42
   |
LL |     assert_is_transmutable_any::<  i32,  u128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<i32>` is not implemented for `u128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i128: BikeshedIntrinsicFromAny<i32>` is not satisfied
  --> $DIR/numbers.rs:112:42
   |
LL |     assert_is_transmutable_any::<  i32,  i128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<i32>` is not implemented for `i128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u64: BikeshedIntrinsicFromAny<f32>` is not satisfied
  --> $DIR/numbers.rs:114:43
   |
LL |     assert_is_transmutable_any::<  f32,   u64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<f32>` is not implemented for `u64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i64: BikeshedIntrinsicFromAny<f32>` is not satisfied
  --> $DIR/numbers.rs:115:43
   |
LL |     assert_is_transmutable_any::<  f32,   i64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<f32>` is not implemented for `i64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f64: BikeshedIntrinsicFromAny<f32>` is not satisfied
  --> $DIR/numbers.rs:116:43
   |
LL |     assert_is_transmutable_any::<  f32,   f64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<f32>` is not implemented for `f64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u128: BikeshedIntrinsicFromAny<f32>` is not satisfied
  --> $DIR/numbers.rs:117:42
   |
LL |     assert_is_transmutable_any::<  f32,  u128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<f32>` is not implemented for `u128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i128: BikeshedIntrinsicFromAny<f32>` is not satisfied
  --> $DIR/numbers.rs:118:42
   |
LL |     assert_is_transmutable_any::<  f32,  i128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<f32>` is not implemented for `i128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u64: BikeshedIntrinsicFromAny<u32>` is not satisfied
  --> $DIR/numbers.rs:120:43
   |
LL |     assert_is_transmutable_any::<  u32,   u64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u32>` is not implemented for `u64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i64: BikeshedIntrinsicFromAny<u32>` is not satisfied
  --> $DIR/numbers.rs:121:43
   |
LL |     assert_is_transmutable_any::<  u32,   i64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u32>` is not implemented for `i64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `f64: BikeshedIntrinsicFromAny<u32>` is not satisfied
  --> $DIR/numbers.rs:122:43
   |
LL |     assert_is_transmutable_any::<  u32,   f64>();
   |                                           ^^^ the trait `BikeshedIntrinsicFromAny<u32>` is not implemented for `f64`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u128: BikeshedIntrinsicFromAny<u32>` is not satisfied
  --> $DIR/numbers.rs:123:42
   |
LL |     assert_is_transmutable_any::<  u32,  u128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<u32>` is not implemented for `u128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i128: BikeshedIntrinsicFromAny<u32>` is not satisfied
  --> $DIR/numbers.rs:124:42
   |
LL |     assert_is_transmutable_any::<  u32,  i128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<u32>` is not implemented for `i128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u128: BikeshedIntrinsicFromAny<u64>` is not satisfied
  --> $DIR/numbers.rs:126:42
   |
LL |     assert_is_transmutable_any::<  u64,  u128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<u64>` is not implemented for `u128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i128: BikeshedIntrinsicFromAny<u64>` is not satisfied
  --> $DIR/numbers.rs:127:42
   |
LL |     assert_is_transmutable_any::<  u64,  i128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<u64>` is not implemented for `i128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u128: BikeshedIntrinsicFromAny<i64>` is not satisfied
  --> $DIR/numbers.rs:129:42
   |
LL |     assert_is_transmutable_any::<  i64,  u128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<i64>` is not implemented for `u128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i128: BikeshedIntrinsicFromAny<i64>` is not satisfied
  --> $DIR/numbers.rs:130:42
   |
LL |     assert_is_transmutable_any::<  i64,  i128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<i64>` is not implemented for `i128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u128: BikeshedIntrinsicFromAny<f64>` is not satisfied
  --> $DIR/numbers.rs:132:42
   |
LL |     assert_is_transmutable_any::<  f64,  u128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<f64>` is not implemented for `u128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `i128: BikeshedIntrinsicFromAny<f64>` is not satisfied
  --> $DIR/numbers.rs:133:42
   |
LL |     assert_is_transmutable_any::<  f64,  i128>();
   |                                          ^^^^ the trait `BikeshedIntrinsicFromAny<f64>` is not implemented for `i128`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/numbers.rs:168:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error: aborting due to 69 previous errors

For more information about this error, try `rustc --explain E0277`.
